# focus

./: .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  streamlit_app.py
src/: app.py  db_session.py  function_calling.py  system_instructions.py
src/api/: app.py
src/api/routes/: data.py  llm.py
src/exporters/: README.md
src/llm_service/: function_calling.py
